--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_core: ^0.5.0
   google_fonts: ^1.1.1
+  flutter_launcher_icons: ^0.8.1
   
 
 dev_dependencies:
@@ -52,7 +53,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/sounds/
     - assets/images/exo/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
